--- a/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/index.html
+++ b/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>This is a WebPage using Bootstrap 4</title>
+	<title>WETECH GROUP OF STARTUP SOULMATES | INNOVATION FIRST</title>
 	<!-- Import Boostrap css, js, font awesome here -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">       
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">    
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 	<div class="container-fluid">
 		<a class="navbar-branch" href="#">
-			<img src="./images/logo.png" height="50">
+			<img src="./images/logo.png" height="50">P"
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" 
 			data-target="#navbarResponsive">
@@ -85,7 +85,7 @@
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 			<a href="#">
-				<button type="button" class="btn btn-outline-secondary">Buy a host</button>
+				<button type="button" class="btn btn-outline-secondary">Request a demo</button>
 			</a>
 		</div>
 	</div>
@@ -168,10 +168,12 @@
 	<div class="row padding">
 		<div class="col-md-4">
 			<div class="card">
-				<img class="card-img-top" src="./images/nguyenduchoang.png">
+				<img class="card-img-top" src="./images/donny.png">
 				<div class="card-body">
-					<h4 class="card-title">Nguyen Duc Hoang</h4>
-					<p class="card-text">Nguyen Duc Hoang is a fullstack developer with 12 years of experiences</p>
+					<h4 class="card-title">
+						Donny	
+					</h4>
+					<p class="card-text">Donny is a web developer, he worked for some startup and technology companies</p>
 					<a href="#" class="btn btn-outline-secondary">See profile</a>
 				</div>
 			</div>
