--- a/03-Build a responsive Login form using Bootstrap 4, HTML 5, CSS 3/code/BootstrapExample/index.html
+++ b/03-Build a responsive Login form using Bootstrap 4, HTML 5, CSS 3/code/BootstrapExample/index.html
@@ -1,14 +1,9 @@
-<!-- 
-Nguyen Duc Hoang (Mr)
-Youtube channel: https://www.youtube.com/c/nguyenduchoang
-Programming tutorial channel 
--->
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Login Form with validation using JQuery</title>	
+	<title>Login Form</title>	
   <!-- Import Bootstrap and JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
   </script>
