--- a/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/index.html
+++ b/01-Build a Responsive Bootstrap Website from Scratch using Bootstrap4, HTML5 & CSS3/code/BootstrapExample/index.html
@@ -40,7 +40,7 @@
 					<a class="nav-link" href="#">Team</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Connect</a>
+					<a class="nav-link" href="#">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -58,34 +58,54 @@
 		<div class="carousel-item active">
 			<img src="./images/carousel0.png">
 			<div class="carousel-caption">
-				<h1 class="display-2">Example</h1>
-				<h3>Autolayout with Boostrap</h3>
+				<h3 class="display-2" style="color:  rgba(177,43,55,0.9);">INNOVATION FIRST!</h3>
 				<button type="button" class="btn btn-outline-light btn-lg">
-					VIEW TUTORIALS
+					REQUEST A DEMO
 				</button>
-				<button type="button" class="btn btn-primary btn-lg">Get started</button>
+				<button type="button" class="btn btn-primary btn-lg">EXPLORE</button>
 			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="./images/carousel1.png">
+			<div class="carousel-caption">
+				<h3 class="display-2"  style="color:  rgba(177,43,55,0.9);">CLIENT IN FOCUSED</h3>
+				<button type="button" class="btn btn-outline-light btn-lg">
+					REQUEST A DEMO
+				</button>
+				<button type="button" class="btn btn-primary btn-lg">EXPLORE</button>
+			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="./images/carousel2.png">
+			<div class="carousel-caption">
+				<h3 class="display-2"  style="color:  rgba(177,43,55,0.9);">THRIVING DIGITAL TRANSFORMATION</h3>
+				<button type="button" class="btn btn-outline-light btn-lg">
+					REQUEST A DEMO
+				</button>
+				<button type="button" class="btn btn-primary btn-lg">EXPLORE</button>
+			</div>
 		</div>
 		<div class="carousel-item">
 			<img src="./images/carousel3.png">
+			<div class="carousel-caption">
+				<h3 class="display-2"  style="color:  rgba(177,43,55,0.9);">NEXT-GEN TECHNOLOGIES</h3>
+				<button type="button" class="btn btn-outline-light btn-lg">
+					REQUEST A DEMO
+				</button>
+				<button type="button" class="btn btn-primary btn-lg">EXPLORE</button>
+			</div>
 		</div>
 	</div>
 </div>
 <!-- jumbotron -->
 <div class="container-fluid">
-	<div class="jumbotron">
+	<div class="jumbotron" style="text-align: justify;">
 		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p>This is an example of using Bootstrap to make a responsive Website. This is a tutorial</p>
+			<p style="text-align: justify;">WeTechGroup is a small startup with 10 members from begining and fortunately led to where it is now, so we wish our resources and experience can contribute back to Vietnam startup ecosystem. We empathize with the loneliness and struggles during the early startup stages.</p>
 		</div>
 		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
 			<a href="#">
-				<button type="button" class="btn btn-outline-secondary">Request a demo</button>
+				<button type="button" class="btn btn-outline-secondary">See Our Story</button>
 			</a>
 		</div>
 	</div>
@@ -98,7 +118,7 @@
 		<!-- Horizontal Rule -->
 		<hr> 
 		<div class="col-12">
-			<p>Welcome my Bootstrap 4 tutorials. Bootstrap is an open-source and free front-end library with HTML and CSS based design</p>
+			<p>Our Service Offering</p>
 		</div>
 	</div>
 </div>
